refactor to device id, not ip address
