# app/utils/pingDevice.server.ts
@@ -3,20 +3,20 @@ import * as Evolver from "client/services.gen";
 import { ENV } from "~/utils/env.server";
 
 export async function pingDevice(
-  ip: string,
+  evolver_url_addr: string,
   timeout = 4000,
 ): Promise<{ online: boolean; name: string }> {
   const controller = new AbortController();
   const { signal } = controller;
 
   const evolverClient = createClient({
-    baseUrl: `http://${ip}:${ENV.DEFAULT_DEVICE_PORT}`,
+    baseUrl: evolver_url_addr,
   });
   // Set a timeout to abort the fetch request
   const timeoutId = setTimeout(() => controller.abort(), timeout);
 
   try {
-    const { response } = await Evolver.healthzHealthzGet({
+    const { response } = await Evolver.healthcheck({
       client: evolverClient,
       signal,
     });
@@ -29,15 +29,19 @@ export async function pingDevice(
     const evolverDescription = await Evolver.describe({
       client: evolverClient,
     });
-    const name = evolverDescription.data.config.name;
+    // TODO: Confirm this is all accessible
+    const {
+      config: { name },
+      id,
+    } = evolverDescription.data;
 
-    return { online: true, name };
+    return { online: true, name, id };
   } catch (error) {
     if (error instanceof DOMException && error.name === "AbortError") {
       console.info(
-        `request to device ${ip} timed out after ${timeout}ms, now designated offline`,
+        `request to device ${evolver_url_addr} timed out after ${timeout}ms, now designated offline`,
       );
     }
-    return { online: false, name: "unknown" };
+    return { online: false, name: "unknown", id: "unknown" };
   }
 }
